examples/11_Istio_security/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: okta-auth
  labels:
    name: okta-auth
    istio-injection: enabled
