examples/11_Istio_security/request-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: okta-backend-auth
spec:
  selector:
    matchLabels:
      app: okta-react
  jwtRules:
    - issuer: "https://nitian-sxr.us.auth0.com"
      jwksUri: "https://nitian-sxr.us.auth0.com/.well-known/jwks.json"
