examples/11_Istio_security/virtual-service-mongo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-mongo
spec:
  hosts:
    - "*"
  gateways:
    - service-gateway
  http:
    - route:
        - destination:
            port:
              number: 3000
            host: okta-react-service
