examples/11_Istio_security/authorization_policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mongo-express-policy
spec:
  selector:
    matchLabels:
      app: mongo-express
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
